--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
                 <button id="toggle-episodes" class="blue-button" onclick="toggleEpisodeDropdowns()">Show Episodes</button>
                 <div id="episode-selection" style="display: none;">
                     <div class="episode-selector">
-                        <label for="season-select-trigger">Season:</label>
-                        <input type="number" id="current-season" min="1" onchange="updatePlayerAndTabOption()">
+                        <label for="current-season">Season:</label>
+                        <input type="number" id="current-season" min="1">
                     </div>
                     <div class="episode-selector">
-                        <label for="episode-select-trigger">Episode:</label>
-                        <input type="number" id="current-episode" min="1" onchange="updatePlayerAndTabOption()">
+                        <label for="current-episode">Episode:</label>
+                        <input type="number" id="current-episode" min="1">
                     </div>
+                    <button id="submit-episode" class="blue-button" onclick="updatePlayerAndTabOption()">Watch</button>
                 </div>
             </div>
             <iframe
@@ -80,16 +81,16 @@
                         <option value="vidsrccc">VidSrc.cc</option>
                         <option value="autoembed">AutoEmbed</option>
                     </select>
-                    <button id="open-player-tab" onclick="openPlayerInNewTab()" disabled>
-                        Open in New Tab
-                    </button>
-                    <button id="open-pstream" onclick="openPStreamInNewTab()" disabled>Open in PStream</button>
-                    <button id="tmdb-button" onclick="openTMDB()">Open TMDB</button>
+                    <button id="open-player-tab" class="blue-button" disabled>Open in New Tab</button>
+                    <button id="open-pstream" class="blue-button" disabled>Open on PStream</button>
+                    <button id="tmdb-button" class="blue-button">View on TMDB</button>
                 </div>
             </div>
         </div>
     </div>
-    <footer><p>© 2025 StephenMovies. All rights reserved.</p></footer>
+    <footer>
+        <p>&copy; 2025 StreamEasy - All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
