--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>StreamEasy</title>
-     <link rel="icon" href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-17%20092256.png?v=1745348155696" type="image/png" />
+     <link rel="icon" href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Untitled%20design.png?v=1745537855225" type="image/png" />
      <link
          href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;500&display=swap"
          rel="stylesheet"
@@ -80,8 +80,8 @@
                      >
                          <option value="">Select Source</option>
                          <option value="vidsrc">VidSrc.xyz</option>
-                         <option value="embedsu">Embed.su</option>
-                         <option value="vidsrccc">VidSrc.cc</option>
+                         <option value="embedsu">Embed.su (Movies Only)</option>
+                         <option value="vidsrccc">VidSrc.cc (Recommended)</option>
                          <option value="autoembed">AutoEmbed</option>
                      </select>
                      <button id="open-player-tab" class="blue-button" disabled>Open in New Tab</button>
@@ -98,7 +98,7 @@
          <p style="text-align: center; margin-top: 20px;">Sports streaming powered by Streamed.su</p>
      </div>
      <footer>
-         <p>&copy; 2025 StreamEasy - All rights reserved.</p>
+         <small>&copy; 2025 XStephen. <i><b>We do not pirate nor share movies, television series, or sports.</b></i> Other sites do that.</small>
      </footer>
      <script src="script.js"></script>
  </body>
