Added non-intrusive ads at the bottom

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
      </div>
      <footer>
          <small>&copy; 2025 XStephen. <i><b>We do not pirate nor share movies, television series, or sports.</b></i> Other sites do that.</small>
+       <br>
+       <br>
+       <br>
+       <a href="https://www.youtube.com/watch?v=ya6XhY_6TMU" target="_blank">
+  <img src="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-25%20140045.png?v=1745604122449" alt="Screenshot" width="300" height="225">
+</a><br>
+       <small>Ads keep StreamEasy free!</small>
      </footer>
      <script src="script.js"></script>
  </body>
