Ads - non-intrusive, no invisible div

--- a/index.html
+++ b/index.html
@@ -104,8 +104,16 @@
        <br>
        <a href="https://www.youtube.com/watch?v=ya6XhY_6TMU" target="_blank">
   <img src="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-25%20140045.png?v=1745604122449" alt="Screenshot" width="300" height="225">
-</a><br>
-       <small>Ads keep StreamEasy free!</small>
+</a>
+        <a href="https://dicord.com" target="_blank">
+  <img src="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-25%20142052.png?v=1745605275612" alt="Screenshot" width="300" height="225">
+</a>
+       <a href="https://hireanassassin.com" target="_blank">
+  <img src="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-25%20144425.png?v=1745606675129" alt="Screenshot" width="300" height="225">
+</a>
+       
+       <br>
+       <small>Ads keep StreamEasy free! (Jokes aside, real ads can be requested at our <a href="browserstephen.glitch.me/discord">discord.</a></small>
      </footer>
      <script src="script.js"></script>
  </body>
