--- a/index.html
+++ b/index.html
@@ -111,9 +111,24 @@
        <a href="https://hireanassassin.com" target="_blank">
   <img src="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Screenshot%202025-04-25%20144425.png?v=1745606675129" alt="Screenshot" width="300" height="225">
 </a>
-       
+       <style>
+  footer a {
+    text-decoration: none;
+  }
+
+  footer a img {
+    border-radius: 12px;
+    margin: 5px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  footer small a {
+    text-decoration: underline;
+  }
+</style>
        <br>
-       <small>Ads keep StreamEasy free! (Jokes aside, real ads can be requested at our <a href="browserstephen.glitch.me/discord">discord.</a></small>
+       <small>Request ads <a href="https://browserstephen.glitch.me/discord.html">here.</a></small>
      </footer>
      <script src="script.js"></script>
  </body>
