--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
               <option value="autoembed">AutoEmbed</option>
               <option value="embedsu">Embed.su (Movies Only)</option>
             </select>
-            
+            <button id="open-player-tab" class="blue-button" disabled>
+              Open in New Tab
+            </button>
+            <button id="open-pstream" class="blue-button" disabled>
+              Open on PStream
+            </button>
             <button id="tmdb-button" class="blue-button">View on TMDB</button>
           </div>
         </div>
