--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
     <header>
@@ -134,8 +135,15 @@
                         <option value="vidsrccc">VidSrc.cc</option>
                         <option value="vidsrc">VidSrc.xyz</option>
                         <option value="vidsrcvip">VidSrc.vip</option>
+                        <option value="vidsrcrip">VidSrc.rip</option>
+                        <option value="2embed">2Embed</option>
                         <option value="autoembed">AutoEmbed</option>
                         <option value="embedsu">Embed.su</option>
+                        <option value="moviekex">Moviekex</option>
+                        <option value="moviesclub">Moviesclub</option>
+                        <option value="vidfast">Vidfast</option>
+                        <option value="vidlink">Vidlink</option>
+                        <option value="videasy">Videasy</option>         
                         <option value="vidora">Vidora (Adless)</option>
                     </select>
                     <button
