--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         >
           📚Manga
         </button>
+        <button
+              class="nav-button"
+              
+              onclick="window.location.href='search.html';"
+        >
+          🔍Search
+        </button>
       </div>
     </header>
 
@@ -97,17 +104,7 @@
           </button>
         </div>
       </div>
-      <div class="search-bar">
-        <input
-          type="text"
-          id="searchInput"
-          placeholder="Enter TMDB ID to Play Media..."
-        />
-        <button onclick="performSearch()" class="blue-button">Search</button>
-      </div>
-      <div style="text-align: center">
-        <small>Find TMDB IDs <a href="tmdb-id-finder.html">here.</a></small>
-      </div>
+      
       <h2>New Releases</h2>
 
       <div class="movie-section" id="new-releases"></div>
@@ -234,3 +231,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
