Update index.html (source description changed)

--- a/index.html
+++ b/index.html
@@ -195,13 +195,14 @@
               onchange="updatePlayerAndTabOption()"
             >
               <option value="selectsource">Select Source</option>
+              <option value="vidsrcco">VidSrc.co (Adless)</option>
+              <option value="vidsrcsu">VidSrc.su (Adless)</option>
               <option value="vidsrccc">VidSrc.cc</option>
               <option value="vidsrc">VidSrc.xyz</option>
 
               <option value="vidsrcvip">VidSrc.vip</option>
               <option value="vidsrcrip">VidSrc.rip</option>
-              <option value="vidsrcco">VidSrc.co (Adless)</option>
-              <option value="vidsrcsu">VidSrc.su (Adless)</option>
+              
               <option value="2embed">2Embed</option>
               <option value="autoembed">AutoEmbed</option>
               <option value="superembed">SuperEmbed</option>
@@ -210,7 +211,7 @@
 
               <option value="moviekex">MovieKex</option>
               <option value="moviesclub">MoviesClub</option>
-              <option value="111movies">111Movies (Adless)</option>
+              <option value="111movies">111Movies (Mostly Adless)</option>
               <option value="vidfast">VidFast</option>
               <option value="vidlink">VidLink</option>
               <option value="vidjoy">VidJoy</option>
