--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
               justify-content: flex-start;
             "
           >
-            
             <select
               id="video-source-select"
               onchange="updatePlayerAndTabOption()"
@@ -232,7 +231,12 @@
             >
               <i class="fa-solid fa-rectangle-ad"> </i> Click to get aura
             </button>
-            <button id="tmdb-button" class="blue-button"><i class="fa-solid fa-file-lines"></i> Description</button>
+            <button id="tmdb-button" class="blue-button">
+              <i class="fa-solid fa-file-lines"></i> Description
+            </button>
+            <button class="blue-button" onclick="openEmbedInNewTab()">
+              <i class="fa-solid fa-up-right-from-square"></i> View in Browser
+            </button>
 
             <script
               async
