replace helvetica with inter

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Untitled%20design.png?v=1745537855225"
       type="image/png"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <script>
     // Disable right-click
@@ -248,6 +245,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="https://streameasy-example.netlify.app/script.js"></script>
   </body>
 </html>
