--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link
       rel="icon"
-      href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Untitled%20design.png?v=1745537855225"
+      href="logo.png"
       type="image/png"
     />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -59,7 +59,7 @@
 
   <body>
     <header>
-      <h1><i class="fa-solid fa-film"></i> StreamEasy</h1>
+      <h1><img src="logo.png" alt="StreamEasy Logo"> StreamEasy</h1>
       <div>
         <button class="nav-button" onclick="showHomePage()">
           <i class="fa-solid fa-house"></i> Home
