--- a/search.html
+++ b/search.html
@@ -20,136 +20,122 @@
       href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Untitled%20design.png?v=1745537855225"
       type="image/png"
     />
-
+    <link rel="stylesheet" href="style.css" />
 
     <style>
-      /* Crucial: Ensure HTML and Body take full viewport height */
-      html {
-        height: 100%; /* HTML must be 100% of viewport height */
-      }
-
       body {
-        font-family: Helvetica, Arial, sans-serif;
-        background: #f0f2f5; /* Lighter background to make the card stand out */
-        margin: 0; /* Remove default body margin */
-        padding: 20px; /* Padding for the body, which creates space around the card */
-        box-sizing: border-box; /* Include padding/border in element's total width/height */
-        min-height: 100%; /* Body must be at least 100% of HTML height */
-
-        display: flex; /* Make body a flex container */
-        justify-content: center; /* Center the main card horizontally */
-        align-items: stretch; /* Crucial: Make the main-card stretch vertically */
+        font-family: 'Inter', Helvetica, Arial, sans-serif;
+        background: #f0f2f5;
+        margin: 0;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        min-height: 100vh;
       }
 
-      /* Styling for the main content card */
       .main-card {
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        max-width: 900px; /* Adjust max-width as needed */
-        width: 100%; /* Take full width up to max-width */
-        flex-grow: 1; /* Allows the card to grow and fill available vertical space within the flex container (body) */
-
-        display: flex; /* Make the card itself a flex container */
-        flex-direction: column; /* Stack its children vertically */
-        min-height: 0; /* Important: Prevents content from overflowing, allowing flex-grow to work properly */
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        padding: 24px;
+        width: 100%;
+        max-width: 1000px;
+        display: flex;
+        flex-direction: column;
       }
 
       #search-container {
         display: flex;
-        gap: 8px;
-        width: 100%; /* Ensure it takes the full width of its parent (.main-card) */
-        margin-bottom: 20px; /* Use margin-bottom for spacing below the search bar */
+        gap: 10px;
+        margin-bottom: 24px;
+        flex-wrap: wrap;
       }
+
+      #search-input,
+      #media-type-select,
+      #search-button,
+      #back-button {
+        font-size: 16px;
+        padding: 10px 14px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+      }
+
       #search-input {
         flex: 1 1 auto;
-        font-size: 16px;
-        padding: 8px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
       }
+
       #media-type-select {
-        flex: 0 0 100px;
-        font-size: 16px;
-        padding: 8px 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background: #fff;
-        cursor: pointer;
+        flex: 0 0 140px;
       }
-      #search-button {
-        flex: 0 0 100px;
-        background: #007bff;
-        border: none;
-        color: white;
-        font-size: 16px;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background 0.2s ease;
-      }
+
+      #search-button,
       #back-button {
-        flex: 0 0 80px;
         background: #007bff;
-        border: none;
         color: white;
-        font-size: 16px;
-        border-radius: 4px;
+        border: none;
         cursor: pointer;
-        transition: background 0.2s ease;
       }
+
+      #search-button:hover,
       #back-button:hover {
         background: #0056b3;
       }
-      #search-button:hover {
-        background: #0056b3;
+
+      #start-message {
+        font-size: 22px;
+        color: #666;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        text-align: center;
       }
 
-      /* CSS Grid for results-container to ensure even gaps */
-      #results-container {
-        display: grid; /* Changed to grid */
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Responsive columns */
-        gap: 15px; /* Consistent gap between grid items */
-        flex-grow: 1; /* Allow results container to take up remaining vertical space */
-        align-content: flex-start; /* Important for multi-line grid items to align to start */
+      #results-container h3 {
+        margin-top: 30px;
+        font-size: 20px;
+        color: #222;
+      }
+
+      .results-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 16px;
+        margin-top: 10px;
       }
 
       .result-card {
         cursor: pointer;
+        background: white;
+        border-radius: 8px;
+        overflow: hidden;
         text-align: center;
-        box-sizing: border-box; /* Include padding/border in the element's total width */
-        /* No fixed width or calc() needed here, grid handles it */
+        transition: transform 0.2s ease;
       }
+
+      .result-card:hover {
+        transform: scale(1.03);
+      }
+
       .result-poster {
-        width: 100%; /* Make poster fill the card width */
-        height: auto; /* Maintain aspect ratio */
-        aspect-ratio: 2/3; /* Standard movie poster aspect ratio */
+        width: 100%;
+        aspect-ratio: 2 / 3;
         object-fit: cover;
-        border-radius: 4px;
+        display: block;
       }
+
       .result-title {
-        margin-top: 6px;
+        padding: 8px;
         font-weight: 600;
         font-size: 14px;
         color: #333;
-        overflow: hidden; /* Hide overflow text */
-        text-overflow: ellipsis; /* Add ellipsis for overflow */
-        white-space: nowrap; /* Prevent text from wrapping */
-      }
-      #start-message {
-        font-size: 24px;
-        color: #666;
-        flex-grow: 1; /* Allow start message to take up remaining vertical space */
-        display: flex; /* Use flexbox for vertical centering of its content */
-        align-items: center; /* Vertically center the paragraph */
-        justify-content: center; /* Horizontally center the paragraph */
-      }
-      #start-message p {
-        margin: 0; /* Remove default paragraph margin */
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     </style>
-    <link rel="stylesheet" href="style.css" />
-
+  </head>
   <body>
     <div class="main-card">
       <div id="search-container">
@@ -164,12 +150,9 @@
           <option value="tv">TV Shows Only</option>
         </select>
         <button id="search-button">
-          <i class="fa-solid fa-magnifying-glass"> </i> Search
+          <i class="fa-solid fa-magnifying-glass"></i> Search
         </button>
-        <button
-          id="back-button"
-          onclick="window.location.href='index.html'"
-        >
+        <button id="back-button" onclick="window.location.href='index.html'">
           <i class="fa-solid fa-circle-arrow-left"></i> Back
         </button>
       </div>
@@ -178,11 +161,19 @@
         <p>Start searching to get started</p>
       </div>
 
-      <div id="results-container"></div>
+      <div id="results-container" style="display: none;">
+        <div id="movie-results" style="display: none;">
+          <h3><i class="fa-solid fa-film"></i> Movies</h3>
+          <div class="results-grid" id="movie-grid"></div>
+        </div>
+        <div id="tv-results" style="display: none;">
+          <h3><i class="fa-solid fa-tv"></i> TV Shows</h3>
+          <div class="results-grid" id="tv-grid"></div>
+        </div>
+      </div>
     </div>
 
     <script>
-      // Replace with your TMDb API key
       const TMDB_API_KEY = "cad8d8114ffeedb538fcff20c4be6d21";
       const TMDB_IMAGE_BASE = "https://image.tmdb.org/t/p/w300";
 
@@ -191,26 +182,29 @@
       const searchButton = document.getElementById("search-button");
       const resultsContainer = document.getElementById("results-container");
       const startMessage = document.getElementById("start-message");
+      const movieGrid = document.getElementById("movie-grid");
+      const tvGrid = document.getElementById("tv-grid");
+      const movieResults = document.getElementById("movie-results");
+      const tvResults = document.getElementById("tv-results");
 
       function showStartMessage(show) {
-        if (show) {
-          startMessage.style.display = "flex"; /* Changed to flex for centering content */
-          resultsContainer.style.display = "none";
-        } else {
-          startMessage.style.display = "none";
-          resultsContainer.style.display = "grid"; // Changed to grid
-        }
+        startMessage.style.display = show ? "flex" : "none";
+        resultsContainer.style.display = show ? "none" : "block";
       }
 
       async function searchTMDb(query, type) {
         if (!query.trim()) {
           showStartMessage(true);
-          resultsContainer.innerHTML = "";
+          movieGrid.innerHTML = "";
+          tvGrid.innerHTML = "";
           return;
         }
 
         showStartMessage(false);
-        resultsContainer.innerHTML = "<p>Loading...</p>";
+        movieGrid.innerHTML = "";
+        tvGrid.innerHTML = "";
+        movieResults.style.display = "none";
+        tvResults.style.display = "none";
 
         let results = [];
 
@@ -233,7 +227,10 @@
                 ...item,
                 media_type: "movie",
               })),
-              ...tvRes.results.map((item) => ({ ...item, media_type: "tv" })),
+              ...tvRes.results.map((item) => ({
+                ...item,
+                media_type: "tv",
+              })),
             ];
           } else {
             const res = await fetch(
@@ -249,11 +246,10 @@
           }
 
           if (!results.length) {
-            resultsContainer.innerHTML = "<p>No results found.</p>";
+            resultsContainer.innerHTML =
+              "<p style='padding:20px;'>No results found.</p>";
             return;
           }
-
-          resultsContainer.innerHTML = "";
 
           results.forEach((item) => {
             const card = document.createElement("div");
@@ -269,7 +265,7 @@
               ? TMDB_IMAGE_BASE + item.poster_path
               : fallbackPoster;
             img.onerror = () => {
-              img.onerror = null; // Prevent infinite loop
+              img.onerror = null;
               img.src = fallbackPoster;
             };
 
@@ -282,27 +278,29 @@
 
             card.onclick = async () => {
               if (item.media_type === "tv") {
-                try {
-                  const tvDetailsRes = await fetch(
-                    `https://api.themoviedb.org/3/tv/${item.id}?api_key=${TMDB_API_KEY}`
-                  );
-                  const tvDetails = await tvDetailsRes.json();
-                  const seasons = tvDetails.number_of_seasons || 1;
-                  openVideoOverlay(item.id, titleEl.textContent, false, seasons);
-                } catch (e) {
-                  console.error("Failed to fetch TV show details:", e);
-                  openVideoOverlay(item.id, titleEl.textContent, false, 1);
-                }
+                const tvDetailsRes = await fetch(
+                  `https://api.themoviedb.org/3/tv/${item.id}?api_key=${TMDB_API_KEY}`
+                );
+                const tvDetails = await tvDetailsRes.json();
+                const seasons = tvDetails.number_of_seasons || 1;
+                openVideoOverlay(item.id, titleEl.textContent, false, seasons);
               } else {
                 openVideoOverlay(item.id, titleEl.textContent, true, 0);
               }
             };
 
-            resultsContainer.appendChild(card);
+            if (item.media_type === "movie") {
+              movieGrid.appendChild(card);
+              movieResults.style.display = "block";
+            } else if (item.media_type === "tv") {
+              tvGrid.appendChild(card);
+              tvResults.style.display = "block";
+            }
           });
-        } catch (error) {
-          console.error(error);
-          resultsContainer.innerHTML = "<p>Error loading results.</p>";
+        } catch (err) {
+          console.error(err);
+          resultsContainer.innerHTML =
+            "<p style='padding:20px;'>Error loading results.</p>";
         }
       }
 
@@ -316,121 +314,7 @@
         }
       });
 
-      // Show start message initially
       showStartMessage(true);
     </script>
   </body>
-  <div id="video-overlay" class="overlay" style="display: none">
-    <div class="overlay-content">
-      <div class="overlay-header">
-        <h2 id="overlay-title"></h2>
-        <button class="close-button" onclick="closeOverlay()">&times;</button>
-      </div>
-      <div id="tv-controls" style="display: none">
-        <button
-          id="toggle-episodes"
-          class="blue-button"
-          onclick="toggleEpisodeDropdowns()"
-        >
-          <i class="fa-solid fa-bars"></i> Options
-        </button>
-        <div id="episode-selection" style="display: none">
-          <div class="episode-selector">
-            <label for="current-season">S</label>
-            <input
-              type="number"
-              id="current-season"
-              min="1"
-              onchange="updatePlayerAndTabOption()"
-            />
-          </div>
-          <div class="episode-selector">
-            <label for="current-episode">E</label>
-            <input
-              type="number"
-              id="current-episode"
-              min="1"
-              onchange="updatePlayerAndTabOption()"
-            />
-          </div>
-          <button class="blue-button" onclick="previousEpisode()">
-            <i class="fa-solid fa-backward-step"></i> Previous
-          </button>
-          <button class="blue-button" onclick="nextEpisode()">
-            <i class="fa-solid fa-forward-step"></i> Next
-          </button>
-        </div>
-      </div>
-      <iframe
-        id="video-player-iframe"
-        src="https://2embed.to"
-        frameborder="0"
-        allowfullscreen
-      ></iframe>
-
-      <div class="source-selector">
-        <div
-          style="
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 10px;
-
-            justify-content: flex-start;
-          "
-        >
-          <select
-            id="video-source-select"
-            onchange="updatePlayerAndTabOption()"
-          >
-            <option value="selectsource">Select Source</option>
-            <option value="vidsrcco">VidSrc.co (Adless)</option>
-            <option value="vidsrcsu">VidSrc.su (Adless)</option>
-            <option value="vidsrccc">VidSrc.cc</option>
-            <option value="vidsrc">VidSrc.xyz</option>
-
-            <option value="vidsrcvip">VidSrc.vip</option>
-            <option value="vidsrcrip">VidSrc.rip</option>
-
-            <option value="2embed">2Embed</option>
-            <option value="autoembed">AutoEmbed</option>
-            <option value="superembed">SuperEmbed</option>
-            <option value="embedescape">EmbedEscape (Adless)</option>
-            <option value="embedsu">Embed.su</option>
-
-            <option value="moviekex">MovieKex</option>
-            <option value="moviesclub">MoviesClub</option>
-            <option value="111movies">111Movies (Mostly Adless)</option>
-            <option value="vidfast">VidFast</option>
-            <option value="vidlink">VidLink</option>
-            <option value="vidjoy">VidJoy</option>
-            <option value="videasy">VidEasy</option>
-            <option value="vidbinge">VidBinge (Adless)</option>
-            <option value="vidora">Vidora (Adless)</option>
-          </select>
-          <button
-            id="open-player-tab"
-            class="blue-button"
-            onclick="window.location.href='https://media.tenor.com/KUdAow8LKG4AAAAe/you-have-no-aura-aura.png';"
-          >
-            <i class="fa-solid fa-rectangle-ad"> </i> Click to get aura
-          </button>
-          <button id="tmdb-button" class="blue-button">
-            <i class="fa-solid fa-file-lines"></i> Description
-          </button>
-          <button class="blue-button" onclick="openEmbedInNewTab()">
-            <i class="fa-solid fa-up-right-from-square"></i> View in Browser
-          </button>
-
-          <script
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4233973495883894"
-            crossorigin="anonymous"
-          ></script>
-        </div>
-      </div>
-    </div>
-  </div>
-    <script src = "script.js"></script>
-  </head>
 </html>
