--- a/search.html
+++ b/search.html
@@ -107,7 +107,7 @@
 
       .result-card {
         cursor: pointer;
-        background: white;
+        background: black;
         border-radius: 8px;
         overflow: hidden;
         text-align: center;
@@ -129,7 +129,7 @@
         padding: 8px;
         font-weight: 600;
         font-size: 14px;
-        color: #333;
+        color: #ffffff;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -163,11 +163,11 @@
 
       <div id="results-container" style="display: none;">
         <div id="movie-results" style="display: none;">
-          <h3><i class="fa-solid fa-film"></i> Movies</h3>
+          <h2><i class="fa-solid fa-film"></i> Movies</h2>
           <div class="results-grid" id="movie-grid"></div>
         </div>
         <div id="tv-results" style="display: none;">
-          <h3><i class="fa-solid fa-tv"></i> TV Shows</h3>
+          <h2><i class="fa-solid fa-tv"></i> TV Shows</h2>
           <div class="results-grid" id="tv-grid"></div>
         </div>
       </div>
