--- a/search.html
+++ b/search.html
@@ -17,7 +17,7 @@
     />
     <link
       rel="icon"
-      href="https://cdn.glitch.global/2a7fd730-62bc-453f-96c2-91756be0c721/Untitled%20design.png?v=1745537855225"
+      href="logo.png"
       type="image/png"
     />
     <link rel="stylesheet" href="style.css" />
@@ -110,7 +110,7 @@
         background: black;
         border-radius: 8px;
         overflow: hidden;
-        text-align: center;
+        text-align: left;
         transition: transform 0.2s ease;
       }
 
