Add Filmex as a recommended video source

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
               onchange="updatePlayerAndTabOption()"
             >
               <option value="selectsource">Select Source</option>
+              <option value="vidora">Filmex (Recommended)</option>
               <option value="vidsrcco">VidSrc.co (Adless)</option>
               <option value="vidsrcsu">VidSrc.su (Adless)</option>
               <option value="vidsrccc">VidSrc.cc</option>
