Update movie title and details in index.html

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           class="banner-image"
         />
         <div class="banner-overlay">
-          <h2 class="banner-title">Lilo and Stitch</h2>
+          <h2 class="banner-title">The Spongebob Movie: Search for Squarepants</h2>
           <p class="banner-subtitle">
-            PG 2025 - Comedy / Sci-Fi
-            <span class="rating">7.1 <i class="fa-solid fa-star"></i></span>
+            PG 2025 - Comedy / Adventure
+            <span class="rating">8.3 <i class="fa-solid fa-star"></i></span>
           </p>
           <button class="blue-button" onclick="openBannerMovie()">
             <i class="fa-solid fa-play"></i> Watch Now
