Update video source options in index.html

--- a/index.html
+++ b/index.html
@@ -197,10 +197,12 @@
               onchange="updatePlayerAndTabOption()"
             >
               <option value="selectsource">Select Source</option>
-              <option value="vidora">Filmex (Recommended)</option>
-              <option value="vidsrcco">VidSrc.co (Adless)</option>
-              <option value="vidsrcsu">VidSrc.su (Adless)</option>
-              <option value="vidsrccc">VidSrc.cc</option>
+              <option value="filmex">Filmex (Recommended)</option>
+              <option value="vidsrcco">VidSrc.co (Recommended)</option>
+              <option value="vidbinge">VidBinge (Adless)</option>
+              <option value="vidora">Vidora (Adless)</option>
+              <option value="vidsrcsu">VidSrc.su (Mostly Adless)</option>
+              <option value="vidsrccc">VidSrc.cc (Reliable)</option>
               <option value="vidsrc">VidSrc.xyz</option>
 
               <option value="vidsrcvip">VidSrc.vip</option>
@@ -209,18 +211,17 @@
               <option value="2embed">2Embed</option>
               <option value="autoembed">AutoEmbed</option>
               <option value="superembed">SuperEmbed</option>
-              <option value="embedescape">EmbedEscape (Adless)</option>
+              <option value="embedescape">EmbedEscape</option>
               <option value="embedsu">Embed.su</option>
 
               <option value="moviekex">MovieKex</option>
               <option value="moviesclub">MoviesClub</option>
-              <option value="111movies">111Movies (Mostly Adless)</option>
+              <option value="111movies">111Movies</option>
               <option value="vidfast">VidFast</option>
               <option value="vidlink">VidLink</option>
               <option value="vidjoy">VidJoy</option>
               <option value="videasy">VidEasy</option>
-              <option value="vidbinge">VidBinge (Adless)</option>
-              <option value="vidora">Vidora (Adless)</option>
+              \
             </select>
             <button
               id="open-player-tab"
