--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
               <option value="vidlink">VidLink</option>
               <option value="vidjoy">VidJoy</option>
               <option value="videasy">VidEasy</option>
+              <option value="vidzee">Vidzee</option>
+              
               \
             </select>
             <button
