--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
             <button class="blue-button" onclick="openEmbedInNewTab()">
               <i class="fa-solid fa-up-right-from-square"></i> View in Browser
             </button>
+              
+        <div class="details-section">
+          <div class="desc-box">
+            <p id="overlay-description">Select a source and play to see details...</p>
+          </div>
+        </div>
+
 
             <script
               async
